# framework.web.wearable.wrt-security

./: CMakeLists.txt
ace/: CMakeLists.txt
ace/configuration/: WAC2.0Policy.xml
ace/dao/: AceDAO.cpp  AceDAOConversions.cpp  AceDAOReadOnly.cpp  CMakeLists.txt  PromptModel.cpp
ace/engine/: Attribute.cpp  CombinerImpl.cpp  Condition.cpp  ConfigurationManager.cpp  PolicyEvaluator.cpp  TreeNode.cpp  parser.cpp
ace/include/ace/: AbstractPolicyEnforcementPoint.h  ConfigurationManager.h  Constants.h  PolicyEnforcementPoint.h  PolicyEvaluator.h  PolicyResult.h  PromptDecision.h  WidgetUsageModel.h
ace/include/ace-dao-ro/: BaseAttribute.h
ace/include/ace-dao-rw/: AceDAO.h
ace_client/include/: ace_api_client.h
ace_client/include/ace-client/: ace_client.h
ace_client/src/: CMakeLists.txt  ace_api_client.cpp  ace_client.cpp
ace_common/include/: ace_api_common.h
ace_install/include/: ace_api_install.h
ace_install/src/: CMakeLists.txt  ace_api_install.cpp
ace_popup_validation/src/: CMakeLists.txt  ace_api_popup_validation.cpp
ace_settings/src/: CMakeLists.txt
commons/: CMakeLists.txt  wrt-commons
commons/modules/: CMakeLists.txt
commons/modules/core/: config.cmake
commons/modules/core/include/dpl/: assert.h  mutex.h  optional_typedefs.h  recursive_mutex.h  singleton.h  thread.h  waitable_handle_watch_support.h
commons/modules/core/src/: assert.cpp  exception.cpp  single_instance.cpp  thread.cpp  waitable_handle.cpp  waitable_handle_watch_support.cpp
commons/modules/db/: config.cmake
commons/modules/db/include/dpl/db/: orm.h  orm_generator.h  thread_database_support.h
commons/modules/db/src/: sql_connection.cpp
commons/modules/log/: config.cmake
commons/modules/log/include/dpl/log/: dlog_log_provider.h  log.h  secure_log.h
commons/modules/log/src/: dlog_log_provider.cpp  log.cpp
communication_client/include/: SecurityCommunicationClient.h
communication_client/src/: SecurityCommunicationClient.cpp
etc/: CMakeLists.txt  wrt_security_change_policy.sh  wrt_security_create_clean_db.sh
mockups/: AceDAOReadOnly_mock.cpp  AceDAOReadOnly_mock.h  PolicyInformationPoint_mock.h  communication_client_mock.cpp  communication_client_mock.h
packaging/: wrt-security.changes  wrt-security.manifest  wrt-security.spec
socket_connection/client/: SecuritySocketClient.cpp
socket_connection/connection/: SocketStream.cpp
src/: CMakeLists.txt  TODO.txt  main.cpp
src/daemon/: security_daemon.cpp
src/daemon/dbus/: org.tizen.SecurityDaemon.service  security_dbus_service.cpp
src/daemon/sockets/: security_socket_service.cpp  security_socket_service.h
src/services/ace/logic/: attribute_facade.cpp  security_controller.cpp  security_controller.h  security_logic.cpp  simple_roaming_agent.cpp
src/services/ocsp/socket/: ocsp_service_callbacks.cpp
systemd/: wrt-security-daemon.service  wrt-security-daemon.socket
tests/: CMakeLists.txt  security-tests.sh  wrt-tests-security-all.sh
tests/ace/: AttributeSetter.h  CMakeLists.txt  Interfaces.h  PEPSingleton.h  TestSuite01.cpp  TestSuite02.cpp  TestSuite03.cpp  TestSuite04.cpp  TestSuite05.cpp  TestSuite06.cpp  ace_tests.cpp  loop_control.cpp  widget_installer.h
tests/ace/test-configuration/: CMakeLists.txt  TizenPolicy-test.xml  WAC2.0Policy-test.xml
tests/ace_client/: CMakeLists.txt  ace_client_tests.cpp  test_cases.cpp
tests/ace_install/: CMakeLists.txt  ace-install-api-demo-policy.xml  ace_install_tests.cpp  test_cases.cpp  widget_installer.h
tests/ace_settings/: CMakeLists.txt  ace_settings_tests.cpp  test_cases.cpp
tests/geolocation_security/: CMakeLists.txt  GeolocationPolicyTest2  createGeolocationSecurityTest.sh  wrt-tests-security-geolocation.sh
tests/geolocation_security/geolocationSecurityTest/: config1.xml  config2.xml  index.html
tests/geolocation_security/geolocationSecurityTest/css/: style.css
tests/geolocation_security/geolocationSecurityTest/js/: include.js
tests/geolocation_security/geolocationSecurityTest/js/WAC2.0/: TestGeolocation.js  TestGeolocationCallback1.js  TestGeolocationCallback2.js
tests/security_daemon_tests/: CMakeLists.txt  HOWTO.txt  ace_ipc_test_cases.cpp  fake_service.cpp  fake_service.h  ipc-tests-demo.xml  main.cpp  service_test_cases.cpp
tests/smack_security/: CMakeLists.txt  createSmackSecurityTest.sh  wrt-tests-security-smack.sh
tests/smack_security/smackSecurityTest1/: config.xml
tests/smack_security/smackSecurityTest1/js/: TestEngine.js  include.js  jquery.js
tests/smack_security/smackSecurityTest1/js/WAC2.0/: CloseCallback.js  TestAccelerometer.js  TestCalendar.js  TestCamera.js  TestContact.js  TestDeviceInteraction.js  TestDevicestatus.js  TestFilesystem.js  TestMessaging.js  TestOrientation.js  TestTask.js
tests/smack_security/smackSecurityTest2/: config1.xml  config10.xml  config2.xml  config3.xml  config4.xml  config5.xml  config6.xml  config7.xml  config8.xml  config9.xml
tests/smack_security/smackSecurityTest2/js/: include1.js  include10.js  include2.js  include3.js  include4.js  include5.js  include6.js  include7.js  include8.js  include9.js
tests/smack_security/smackSecurityTest2/js/WAC2.0/: TestAccelerometer.js  TestCalendar.js  TestCamera.js  TestContact.js  TestDeviceInteraction.js  TestDevicestatus.js  TestFilesystem.js  TestMessaging.js  TestOrientation.js  TestTask.js
wrt_ocsp/src/: CMakeLists.txt  wrt_ocsp_api.cpp
