include(FindPkgConfig)

IF(DEFINED DBUS_CONNECTION)
PKG_CHECK_MODULES(ACE_INSTALL_DEPS
    dpl-efl
    dpl-dbus-efl
    REQUIRED
    )
ENDIF()

SET(ACE_INSTALL_DIR
    ${PROJECT_SOURCE_DIR}/ace_install
    )

SET(ACE_INSTALL_SRC_DIR
    ${ACE_INSTALL_DIR}/src
    )

SET(ACE_INSTALL_INCLUDE_DIR
    ${ACE_INSTALL_DIR}/include
    )

SET(ACE_INSTALL_SOURCES
    ${COMMUNICATION_CLIENT_SOURCES}
    ${ACE_INSTALL_SRC_DIR}/ace_api_install.cpp    
    )

SET(ACE_INSTALL_INCLUDES
    ${COMMUNICATION_CLIENT_INCLUDES}
    ${ACE_INSTALL_DEPS_INCLUDE_DIRS}
    ${ACE_INSTALL_INCLUDE_DIR}
    ${PROJECT_SOURCE_DIR}/ace_common/include
    ${PROJECT_SOURCE_DIR}/ace/include
    ${PROJECT_SOURCE_DIR}/src/services/ace
    ${PROJECT_SOURCE_DIR}/src/services/ace/dbus/api
    ${PROJECT_SOURCE_DIR}/src/daemon/dbus
    )

ADD_DEFINITIONS(${ACE_INSTALL_DEPS_CFLAGS})
ADD_DEFINITIONS(${ACE_INSTALL_CFLAGS_OTHER})

INCLUDE_DIRECTORIES(${ACE_INSTALL_INCLUDES})
IF(NOT DEFINED DBUS_CONNECTION)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/commons/modules/log/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/commons/modules/core/include)
LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/commons/build/core
    ${PROJECT_SOURCE_DIR}/commons/build/log
    )
ENDIF()

ADD_LIBRARY(${TARGET_ACE_INSTALL_LIB} SHARED ${ACE_INSTALL_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_ACE_INSTALL_LIB} PROPERTIES
    SOVERSION ${API_VERSION}
    VERSION ${VERSION})

SET_TARGET_PROPERTIES(${TARGET_ACE_INSTALL_LIB} PROPERTIES
    COMPILE_FLAGS -fPIC)

IF(DEFINED DBUS_CONNECTION)
TARGET_LINK_LIBRARIES(${TARGET_ACE_INSTALL_LIB}
    ${ACE_INSTALL_DEPS_LIBRARIES}
    ${TARGET_ACE_DAO_RW_LIB}
    )
ELSE()
TARGET_LINK_LIBRARIES(${TARGET_ACE_INSTALL_LIB}
    ${ACE_INSTALL_DEPS_LIBRARIES}
    ${TARGET_ACE_DAO_RW_LIB}
    libwrt-security-commons
    libwrt-security-commons-log
    )
ENDIF()

INSTALL(TARGETS ${TARGET_ACE_INSTALL_LIB}
    DESTINATION ${LIB_INSTALL_DIR})

INSTALL(FILES
    ${ACE_INSTALL_INCLUDE_DIR}/ace_api_install.h
    DESTINATION include/ace-install
    )
